--- a/src/app/password-input/password-input.component.html
+++ b/src/app/password-input/password-input.component.html
@@ -1,1 +1,13 @@
-<input #passwordInput [(ngModel)]="password" [value]="password!" (input)="checkStrength($event)" placeholder="Enter password" type="text"/>
+<div class="password-input-container">
+  <input
+    #passwordInput
+    [(ngModel)]="password"
+    [value]="password"
+    (input)="checkStrength($event)"
+    placeholder="Enter password"
+    [type]="showPassword ? 'text' : 'password'"
+  />
+  <button type="button" (click)="togglePasswordVisibility()">
+    {{ showPassword ? '🙈' : '👁️' }}
+  </button>
+</div>
